--- a/scss/pages/_game.scss
+++ b/scss/pages/_game.scss
@@ -3,8 +3,6 @@
 #game {
   background-color: var(--theme-bg, #{a.$color-primary-dark});
   color: var(--theme-text, #{a.$color-white});
-  min-height: 100vh;
-  display: flex;
   flex-direction: column;
   position: relative;
 }
@@ -67,10 +65,12 @@
 
 .game__board {
   flex: 1;
+  min-height: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: a.px-to-rem(24) a.px-to-rem(40);
+  padding: a.px-to-rem(20) a.px-to-rem(40);
+  overflow: hidden;
 }
 
 .game__grid {
