--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -2,13 +2,10 @@
 
 #home {
   position: relative;
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   background-color: a.$color-primary-dark;
-  overflow: hidden;
 }
 
 .home__watermark {
